--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 # Core bot framework
-aiogram>=3.0.0
+aiogram==3.21.0
 
 # Calendar processing
-icalendar>=5.0.0
-python-dateutil>=2.8.0
+icalendar==6.3.1
+python-dateutil==2.9.0.post0
 
 # Timezone support
-pytz>=2023.3
+pytz==2025.2
 
 # HTTP client for downloading calendar files
-wget>=3.2
+wget==3.2
 
 # Database (built-in with Python)
 # sqlite3 - included in Python standard library
 
 # Additional dependencies for date/time handling
-typing-extensions>=4.0.0
+typing-extensions==4.14.1
